# ADAS

./: README.md
dev/exercise_1/install/: local_setup.sh  setup.sh
dev/exercise_1/install/gui_robot_straight/lib/gui_robot_straight/: straight_simulator
dev/exercise_1/install/gui_robot_straight/share/gui_robot_straight/: package.bash  (+4 more)
dev/exercise_1/src/gui_robot_straight/: README.md  package.xml  setup.cfg  setup.py
dev/exercise_1/src/gui_robot_straight/gui_robot_straight/: straight_simulator.py
dev/exercise_2/: README.md
dev/exercise_2/install/: local_setup.sh  setup.sh
dev/exercise_2/src/gui_robot_circle/: setup.cfg  setup.py
dev/exercise_2/src/gui_robot_circle/gui_robot_circle/: circle_simulator.py
dev/exercise_3/: README1.md  README2.md
dev/exercise_3/install/: local_setup.sh  setup.sh
dev/exercise_3/src/slam_turtle/: setup.cfg  setup.py
dev/exercise_3/src/slam_turtle/slam_turtle/: slam_like_node.py
dev/exercise_3/src/turtle_obstacle_avoidance/: setup.cfg  setup.py
dev/gui_robot_circle/: README.md  setup.py
dev/gui_robot_sim/: README.md  robot_simulator.py  setup.py
dev/my_turtle_square/: README.md  setup.py  turtle_square.py
dev/ros2_auto/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev/ros2_auto/src/robot_motion_sim/: package.xml  setup.cfg  setup.py
dev/turtle_obstacle_avoidance/: README.md  obstacle_avoider.py  setup.py
doc/: Installation of ROS2 Jazzy Jalisco in Linux Ubuntu 24.docx  ~$stallation of ROS2 Jazzy Jalisco in Linux Ubuntu 24.docx  ~WRL0634.tmp
main/: autonomous_vehicle.py  route_map.xlsx
(+32 files in other folders)
